<resources>
    <string name="app_name">妙算子</string>
    <string name="exponent">Exp</string>
    <string name="power">x^y</string>
    <string name="percent">%</string>
    <string name="backspace">Del</string>
    <string name="mod">mod</string>
    <string name="all_clear">AC</string>
    <string name="radical">x√y</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="divide">÷</string>
    <string name="log">log</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="ln">ln</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="factorial">n!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
    <string name="unit_conversion">单位换算</string>
    <string name="length_conversion">长度换算</string>
    <string name="length_select">选择单位</string>
    <string name="binary">二进制数码</string>
    <string name="octal">八进制数码</string>
    <string name="decimal">十进制数码</string>
    <string name="hexadecimal">十六进制数码</string>
    <string name="standard">进制转换</string>
    <string name="currency_conversion">汇率转换</string>
    <string name="source_value_hint">请输入兑换金额</string>
    <string name="source_currency_hint">源币种</string>
    <string name="destination_currency_hint">目的币种</string>
    <string name="submit">计算</string>
    <string name="clear">清空</string>
</resources>
