<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <Button
            android:id="@+id/button_exponent"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/exponent"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_power"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/power"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_mod"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/mod"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_radical"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/radical"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_sin"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/sin"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_cos"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/cos"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_tan"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/tan"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_log"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/log"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_ln"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/ln"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_factorial"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/factorial"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_left_bracket"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/left_bracket"
            android:textSize="12sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_right_bracket"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:text="@string/right_bracket"
            android:textSize="12sp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="start"
        android:gravity="bottom|end"
        android:textSize="50sp"
        />

    <TextView
        android:id="@+id/text_output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center|start"
        android:gravity="end"
        android:textSize="50sp"
        android:hint="@string/zero"/>

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">



        <Button
            android:id="@+id/button_all_clear"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/all_clear"
            android:textSize="25sp"
            android:textColor="#ffffff"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_backspace"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/backspace"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_percent"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >

        <Button
            android:id="@+id/button_seven"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_eight"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_nine"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >

        <Button
            android:id="@+id/button_four"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_five"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_six"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >

        <Button
            android:id="@+id/button_one"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/button_zero"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:text="@string/zero"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/point"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="25sp"
            android:textColor="#ffffff"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>