<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/length_conversion"
            android:textSize="25sp"
            android:gravity="top|center"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:id="@+id/input"
            android:textSize="30sp"
            android:hint="@string/zero"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:prompt="@string/length_select"
            android:entries="@array/unit"
            style="@android:style/Widget.Spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/result"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:textSize="30sp"
            android:hint="@string/zero"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:prompt="@string/length_select"
            android:entries="@array/unit"
            style="@android:style/Widget.Spinner">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/button_all_clear"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/all_clear"
            android:textSize="25sp"
            android:textColor="#ffffff"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_backspace"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/backspace"
            android:textSize="25sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="25sp"
            android:textColor="#ffffff"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">
        <Button
            android:id="@+id/button_seven"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_eight"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_nine"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <Button
            android:id="@+id/button_four"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_five"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_six"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/button_one"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/button_zero"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:text="@string/zero"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/point"
            android:textSize="25sp"/>
    </LinearLayout>


</LinearLayout>